<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="movieDetailViewModel"
            type="com.diego.mvvmsample.ui.movieDetail.MovieDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:transitionName="@string/movie_detail_card_transition_name"
            app:cardBackgroundColor="?attr/background_card_color"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{movieDetailViewModel.showLayoutError ? View.VISIBLE : View.GONE}"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/tv_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/color_on_surface_emphasis_high"
                    app:errorMessage="@{movieDetailViewModel.showErrorMessage}"
                    tools:text="@string/no_connect_message" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{() -> movieDetailViewModel.buttonRetryClicked()}"
                    android:text="@string/retry" />

            </LinearLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="@{movieDetailViewModel.showProgressBar ? View.VISIBLE : View.GONE}"
                app:indicatorColor="?colorSecondary"
                tools:visibility="gone" />

            <ScrollView
                android:id="@+id/layout_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="1.0dp"
                android:scrollbarThumbVertical="@color/color_on_surface_emphasis_disabled"
                android:scrollbars="vertical"
                android:visibility="@{movieDetailViewModel.showLayoutResult ? View.VISIBLE : View.GONE}"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/movie_detail_img"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/movie_image"
                        app:movieDetailImage="@{movieDetailViewModel.movieDetail}"
                        tools:ignore="ImageContrastCheck"
                        tools:scaleType="fitCenter"
                        tools:src="@drawable/ic_place_holder" />

                    <TextView
                        android:id="@+id/movie_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/color_on_surface_emphasis_high"
                        app:drawableLeftCompat="@drawable/ic_star"
                        app:movieDetailRating="@{movieDetailViewModel.movieDetail}"
                        tools:ignore="TextContrastCheck"
                        tools:text="2.2" />

                    <TextView
                        android:id="@+id/movie_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_horizontal"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="@color/color_on_surface_emphasis_high"
                        app:movieDetailTitle="@{movieDetailViewModel.movieDetail}"
                        tools:text="@string/movie_title_example" />

                    <TextView
                        android:id="@+id/movie_detail_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_horizontal"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/color_on_surface_emphasis_high"
                        app:movieDetailReleaseDate="@{movieDetailViewModel.movieDetail}"
                        tools:text="@string/movie_release_date_example" />

                    <TextView
                        android:id="@+id/movie_detail_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_horizontal"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/color_on_surface_emphasis_high"
                        app:movieDetailGenres="@{movieDetailViewModel.movieDetail}"
                        tools:text="@string/movie_genres_example" />

                    <TextView
                        android:id="@+id/movie_detail_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/color_on_surface_emphasis_medium"
                        android:textStyle="italic"
                        app:movieDetailTagline="@{movieDetailViewModel.movieDetail}"
                        tools:text="@string/movie_tagline_example" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/synopsis"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/color_on_surface_emphasis_high" />

                    <TextView
                        android:id="@+id/movie_detail_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:paddingBottom="16dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/color_on_surface_emphasis_high"
                        app:movieDetailOverview="@{movieDetailViewModel.movieDetail}"
                        tools:text="@string/movie_overview_example" />

                </LinearLayout>

            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>